--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular2-material/slider": "^2.0.0-alpha.8-2",
     "@angular2-material/tooltip": "^2.0.0-alpha.8-2",
     "@types/hammerjs": "^2.0.32",
+    "angular2-in-memory-web-api": "0.0.20",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "5.0.0-beta.12",
